--- a/src/app/features/operadoras/presentation/pages/list-operadoras/list-operadoras.component.html
+++ b/src/app/features/operadoras/presentation/pages/list-operadoras/list-operadoras.component.html
@@ -1,1 +1,7 @@
-<app-table-operadoras></app-table-operadoras>
+<app-table
+  [title]="'Lista de operadoras'"
+  [displayedColumns]="displayedColumns"
+  [dataSource]="dataSource"
+  [actions]="actions"
+>
+</app-table>
