--- a/src/app/features/operadoras/presentation/components/table-operadoras/table-operadoras.component.html
+++ b/src/app/features/operadoras/presentation/components/table-operadoras/table-operadoras.component.html
@@ -20,19 +20,31 @@
           <td mat-cell *matCellDef="let row">{{ row.id }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="progress">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Progress</th>
-          <td mat-cell *matCellDef="let row">{{ row.progress }}%</td>
-        </ng-container>
-
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
           <td mat-cell *matCellDef="let row">{{ row.name }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="fruit">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Fruit</th>
-          <td mat-cell *matCellDef="let row">{{ row.fruit }}</td>
+        <ng-container matColumnDef="ruc">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruc</th>
+          <td mat-cell *matCellDef="let row">{{ row.ruc }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone1">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Telefono</th>
+          <td mat-cell *matCellDef="let row">{{ row.phone1 }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Dirección</th>
+          <td mat-cell *matCellDef="let row">{{ row.address }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="responsible">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Responsable</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.responsible.firstName }} {{ row.responsible.lastName }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
@@ -46,14 +58,6 @@
                 class="btn-view"
               >
                 <mat-icon>visibility</mat-icon>
-              </a>
-              <a
-                matTooltip="Incrementar"
-                mat-icon-button
-                aria-label="Incrementar"
-                class="btn-increment"
-              >
-                <mat-icon>post_add</mat-icon>
               </a>
               <a
                 matTooltip="Editar"
