--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -1,9 +1,9 @@
 <div class="not-found-container">
-  <mat-card class="not-found-card">
+  <mat-card>
     <mat-card-header>
       <div>
         <img
-          src="img/not-found.webp"
+          src="assets/images/pages/not-found.webp"
           width="300"
           height="300"
           alt="No encontrada"
@@ -15,7 +15,7 @@
       <p>Lo sentimos, la página que estás buscando no existe.</p>
     </mat-card-content>
     <mat-card-actions>
-      <a mat-flat-button href="/main">Ir al inicio</a>
+      <a mat-flat-button color="primary" href="/main">Ir al inicio</a>
     </mat-card-actions>
   </mat-card>
 </div>
