--- a/src/app/features/contratos/presentation/components/form-contratos/form-contratos.component.html
+++ b/src/app/features/contratos/presentation/components/form-contratos/form-contratos.component.html
@@ -1,212 +1,5 @@
 <mat-card class="cardWithShadow theme-card m-auto">
   <mat-card-content>
-    <mat-stepper [linear]="isLinear" #stepper>
-      <mat-step [stepControl]="operatorFormGroup">
-        <form [formGroup]="operatorFormGroup">
-          <ng-template matStepLabel>Datos de la operadora</ng-template>
-          <div class="max-width-500px m-auto">
-            <h3>Registro Operadora</h3>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Nombre</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="name" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="name"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Ruc</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="ruc" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="ruc"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Teléfono 1</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="phone1" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="phone1"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Teléfono 2</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="phone2" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="phone2"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Dirección</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="address" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="address"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Observación</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <textarea matInput formControlName="observation"></textarea>
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="observation"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-            <div class="primary">
-              <button mat-flat-button matStepperNext color="primary">
-                Siguiente
-              </button>
-            </div>
-          </div>
-        </form>
-      </mat-step>
-      <mat-step
-        [stepControl]="responsibleFormGroup"
-        label="Datos del responsable"
-      >
-        <form [formGroup]="responsibleFormGroup">
-          <div class="max-width-500px m-auto">
-            <h3>Registro Responsable</h3>
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Nombres</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="firstName" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="firstName"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Apellidos</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="lastName" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="lastName"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Email</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="email" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="email"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div>
-              <mat-label class="f-w-500 m-b-4 d-block">Teléfono</mat-label>
-              <mat-form-field
-                appearance="outline"
-                class="w-100"
-                color="primary"
-              >
-                <input matInput formControlName="phone" />
-                <mat-error class="d-flex">
-                  <arv-validation-messages
-                    class="margin-p-none"
-                    for="phone"
-                  ></arv-validation-messages>
-                </mat-error>
-              </mat-form-field>
-            </div>
-
-            <div class="d-flex gap-8">
-              <button mat-button matStepperPrevious color="primary">
-                Regresar
-              </button>
-              <button
-                mat-flat-button
-                matStepperNext
-                color="primary"
-                (click)="save()"
-              >
-                Guardar
-              </button>
-            </div>
-          </div>
-        </form>
-      </mat-step>
-    </mat-stepper>
+    <mat-stepper [linear]="isLinear" #stepper> </mat-stepper>
   </mat-card-content>
 </mat-card>
