--- a/src/app/features/operadoras/presentation/components/form-operadora/form-operadora.component.html
+++ b/src/app/features/operadoras/presentation/components/form-operadora/form-operadora.component.html
@@ -14,11 +14,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="name" />
+                <input matInput formControlName="nombre" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="name"
+                    for="nombre"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -48,11 +48,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="phone1" />
+                <input matInput formControlName="telefono1" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="phone1"
+                    for="telefono1"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -65,11 +65,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="phone2" />
+                <input matInput formControlName="telefono2" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="phone2"
+                    for="telefono2"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -82,11 +82,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="address" />
+                <input matInput formControlName="direccion" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="address"
+                    for="direccion"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -99,11 +99,11 @@
                 class="w-100"
                 color="primary"
               >
-                <textarea matInput formControlName="observation"></textarea>
+                <textarea matInput formControlName="observacion"></textarea>
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="observation"
+                    for="observacion"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -130,11 +130,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="firstName" />
+                <input matInput formControlName="nombres" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="firstName"
+                    for="nombres"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -147,11 +147,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="lastName" />
+                <input matInput formControlName="apellidos" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="lastName"
+                    for="apellidos"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
@@ -181,11 +181,11 @@
                 class="w-100"
                 color="primary"
               >
-                <input matInput formControlName="phone" />
+                <input matInput formControlName="telefono" />
                 <mat-error class="d-flex">
                   <arv-validation-messages
                     class="margin-p-none"
-                    for="phone"
+                    for="telefono"
                   ></arv-validation-messages>
                 </mat-error>
               </mat-form-field>
