--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -29,26 +29,19 @@
               {{ getValue(row, column.property) }}
             </ng-container>
 
-            } @else {
-            <ng-template>
-              <div class="actions">
-                @for (action of column.actions; track action) {
-                <ng-container>
-                  <a
-                    [matTooltip]="action.tooltip"
-                    mat-icon-button
-                    [attr.aria-label]="action.ariaLabel"
-                    [class]="action.class"
-                    (click)="onActionClick(action.name, row)"
-                  >
-                    <mat-icon>{{ action.icon }}</mat-icon>
-                  </a>
-                </ng-container>
-                }
-              </div>
-            </ng-template>
-
-            }
+            } @else { @for (action of column.actions; track action) {
+            <ng-container>
+              <button
+                [matTooltip]="action.tooltip"
+                mat-icon-button
+                [attr.aria-label]="action.ariaLabel"
+                [class]="action.class"
+                (click)="onActionClick(action.name, row)"
+              >
+                <mat-icon>{{ action.icon }}</mat-icon>
+              </button>
+            </ng-container>
+            } }
           </td>
         </ng-container>
         }
@@ -56,7 +49,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+          <td colspan="8" class="mat-cell no-data-container">
             {{ noDataMessage }}
           </td>
         </tr>
