--- a/src/app/features/contratos/presentation/components/form-contratos/form-contratos.component.html
+++ b/src/app/features/contratos/presentation/components/form-contratos/form-contratos.component.html
@@ -76,7 +76,165 @@
               </mat-form-field>
             </div>
 
+            <div>
+              <mat-label>Seleccionar archivo</mat-label>
+              <mat-form-field class="w-100" appearance="outline"  >
+                <input matInput readonly [value]="fileName" formControlName="documento"/>
+                <button
+                  mat-icon-button
+                  matSuffix
+                  (click)="fileInput.click()"
+                  type="button"
+                >
+                  <mat-icon>attach_file</mat-icon>
+                </button>
+                <input
+                  type="file"
+                  #fileInput
+                  hidden
+                  (change)="onFileSelected($event)"
+                />
+                <mat-error class="d-flex">
+                  <arv-validation-messages
+                    class="margin-p-none"
+                    for="documento"
+                  ></arv-validation-messages>
+                </mat-error>
+              </mat-form-field>
+
+            </div>
+
             <div class="primary">
+              <button mat-flat-button matStepperNext color="primary">
+                Siguiente
+              </button>
+            </div>
+          </div>
+        </form>
+      </mat-step>
+
+      <mat-step [stepControl]="sectorFormGroup">
+        <form [formGroup]="sectorFormGroup">
+          <ng-template matStepLabel>Ubicación</ng-template>
+          <div class="max-width-500px m-auto">
+            <h3>Ingrese la ubicación del contrato</h3>
+
+            <div>
+              <mat-label class="f-w-500 m-b-4 d-block">Pronvicia</mat-label>
+              <mat-form-field
+                appearance="outline"
+                class="w-100"
+                color="primary"
+              >
+                <mat-select
+                  formControlName="codigoProvincia"
+                  (valueChange)="onChangeProvince($event)"
+                >
+                  <mat-option>Seleccione una provincia ...</mat-option>
+                  @for (provincia of provincias; track provincia.codigo) {
+                  <mat-option [value]="provincia.codigo">{{
+                    provincia.nombre
+                  }}</mat-option>
+                  }
+                </mat-select>
+                <mat-error class="d-flex">
+                  <arv-validation-messages
+                    class="margin-p-none"
+                    for="codigoProvincia"
+                  ></arv-validation-messages>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div>
+              <mat-label class="f-w-500 m-b-4 d-block">Canton</mat-label>
+              <mat-form-field
+                appearance="outline"
+                class="w-100"
+                color="primary"
+              >
+                <mat-select
+                  formControlName="codigoCanton"
+                  (valueChange)="onChangeCanton($event)"
+                >
+                  <mat-option>Seleccione un canton ...</mat-option>
+                  @for (canton of cantones; track canton.codigo) {
+                  <mat-option [value]="canton.codigo">{{
+                    canton.nombre
+                  }}</mat-option>
+                  }
+                </mat-select>
+                <mat-error class="d-flex">
+                  <arv-validation-messages
+                    class="margin-p-none"
+                    for="codigoCanton"
+                  ></arv-validation-messages>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div>
+              <mat-label class="f-w-500 m-b-4 d-block">Parroquia</mat-label>
+              <mat-form-field
+                appearance="outline"
+                class="w-100"
+                color="primary"
+              >
+                <mat-select formControlName="codigoParroquia">
+                  <mat-option>Seleccione una parroquia ...</mat-option>
+                  @for (parroquia of parroquias; track parroquia.codigo) {
+                  <mat-option [value]="parroquia.codigo">{{
+                    parroquia.nombre
+                  }}</mat-option>
+                  }
+                </mat-select>
+                <mat-error class="d-flex">
+                  <arv-validation-messages
+                    class="margin-p-none"
+                    for="codigoParroquia"
+                  ></arv-validation-messages>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div>
+              <mat-label class="f-w-500 m-b-4 d-block">Sectores</mat-label>
+              <mat-form-field
+                appearance="outline"
+                class="w-100"
+                color="primary"
+              >
+                <input matInput formControlName="sectores" />
+                <mat-error class="d-flex">
+                  <arv-validation-messages
+                    class="margin-p-none"
+                    for="sectores"
+                  ></arv-validation-messages>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div>
+              <mat-label class="f-w-500 m-b-4 d-block">Direcciones</mat-label>
+              <mat-form-field
+                appearance="outline"
+                class="w-100"
+                color="primary"
+              >
+                <input matInput formControlName="direcciones" />
+                <mat-error class="d-flex">
+                  <arv-validation-messages
+                    class="margin-p-none"
+                    for="direcciones"
+                  ></arv-validation-messages>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div class="d-flex gap-8">
+              <button mat-button matStepperPrevious color="primary">
+                Regresar
+              </button>
               <button mat-flat-button matStepperNext color="primary">
                 Siguiente
               </button>
